--- a/bower.json
+++ b/bower.json
@@ -5,30 +5,7 @@
     "Zinkerz"
   ],
   "dependencies": {
-    "angular": "1.3.18",
-    "angulartics": "0.17.2",
-    "ionic": "1.1.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.3.18"
-  },
-  "overrides": {
-    "angulartics": {
-      "main": [
-        "src/angulartics.js",
-        "src/angulartics-ga-cordova.js",
-        "src/angulartics-segmentio.js",
-        "src/angulartics-mixpanel.js"
-      ],
-      "dependencies": {
-        "angular": ">= 1.1.5",
-        "waypoints": "~2.0.3",
-        "SHA-1": "*"
-      }
-    }
-  },
-  "resolutions": {
-    "angular": "1.3.18"
+    "angular": "^1.3.18"
   },
   "ignore":[
     ".*",
