--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Zinkerz"
   ],
   "dependencies": {
-    "angular": "^1.3.18"
+    "angular": "1.3.x || 1.4.x"
   },
   "ignore":[],
   "main": "dist/znk.infra.js"
