--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "angular": "1.3.x || 1.4.x"
   },
-  "ignore":[],
+  "ignore":[
+    "src",
+    "test"
+  ],
   "main": "dist/znk.infra.js"
 }
