--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "karma-safari-launcher": "0.1.1",
     "karma-jasmine": "0.3.5",
     "karma-jasmine-html-reporter": "0.1.8",
-    "time-grunt": "1.0.0"
+    "time-grunt": "1.0.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "engines": {
     "node": ">=0.10.0"
