--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "devDependencies": {
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "0.7.0",
     "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "0.12.0",
     "grunt-ng-annotate": "0.9.2",
     "grunt-wiredep": "2.0.0",
     "jit-grunt": "0.9.1",
     "jshint-stylish": "1.0.0",
-    "grunt-karma": "0.12.0",
     "karma": "0.13.9",
     "karma-chrome-launcher": "0.1.7",
-    "karma-safari-launcher": "0.1.1",
     "karma-jasmine": "0.3.5",
     "karma-jasmine-html-reporter": "0.1.8",
-    "time-grunt": "1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-safari-launcher": "0.1.1",
+    "phantomjs": "^1.9.19",
+    "time-grunt": "1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
