--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma-chrome-launcher": "0.1.7",
     "karma-jasmine": "0.3.5",
     "karma-jasmine-html-reporter": "0.1.8",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-safari-launcher": "0.1.1",
     "phantomjs": "^1.9.19",
