--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "Zinkerz"
   ],
   "dependencies": {
-    "angular": "1.3.x || 1.4.x",
-    "angular-mocks": "1.3.18"
+    "angular": "1.4.x",
+    "angular-mocks": "1.4.x"
   },
   "ignore":[
     ".*",
