--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "grunt-ng-annotate": "0.9.2",
     "grunt-sass": "^1.1.0",
     "grunt-wiredep": "2.0.0",
+    "jasmine-core": "^2.4.1",
     "jit-grunt": "0.9.1",
     "jshint-stylish": "1.0.0",
     "karma": "0.13.9",
     "karma-chrome-launcher": "0.1.7",
-    "karma-jasmine": "0.3.5",
+    "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "0.1.8",
     "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
