--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-html2js": "^0.3.5",
     "grunt-karma": "0.12.0",
     "grunt-ng-annotate": "0.9.2",
     "grunt-sass": "^1.1.0",
@@ -21,7 +22,6 @@
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "0.1.8",
     "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
     "karma-safari-launcher": "0.1.1",
     "phantomjs": "^1.9.19",
     "time-grunt": "1.0.0"
