--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,25 @@
 {
-  "name": "infra",
-  "version": "v1.0.3",
-  "authors": [
-    "Zinkerz"
-  ],
-  "dependencies": {
-    "angular": "1.4.x",
-    "angular-mocks": "1.4.x",
-    "angular-carousel": "~1.0.1",
-    "Swiper": "swiper#~3.2.7"
-  },
-  "ignore": [
-    ".*",
-    "src",
-    "test",
-    "demo"
-  ],
-  "main": "dist/znk.infra.js",
-  "resolutions": {
-    "angular": "1.4.x"
-  },
-  "devDependencies": {
-    "es5-shim": "~4.4.1"
-  }
+    "name": "infra",
+    "version": "v1.0.3",
+    "authors": [
+        "Zinkerz"
+    ],
+    "dependencies": {
+        "angular": "1.4.x",
+        "Swiper": "swiper#~3.2.7"
+    },
+    "ignore": [
+        ".*",
+        "src",
+        "test",
+        "demo"
+    ],
+    "main": "dist/znk.infra.js",
+    "resolutions": {
+        "angular": "1.4.x"
+    },
+    "devDependencies": {
+        "es5-shim": "~4.4.1",
+        "angular-mocks": "1.4.x",
+    }
 }
