angular carousel was removed

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
     },
     "devDependencies": {
         "es5-shim": "~4.4.1",
-        "angular-mocks": "1.4.x",
+        "angular-mocks": "1.4.x"
     }
 }
