storage srv was added

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
     "globals": {
         "angular": false,
         "ionic": false,
-        "Swiper": false
+        "Swiper": false,
+        "Firebase": false
     }
 }
