--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "0.1.8",
     "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.3",
     "karma-safari-launcher": "0.1.1",
     "phantomjs": "^1.9.19",
     "time-grunt": "1.0.0"
