--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
   ],
   "dependencies": {
     "angular": "1.4.x",
-    "Swiper": "swiper#~3.2.7",
-    "angularfire": "~1.1.3"
+    "Swiper": "swiper#~3.2.7"
   },
   "ignore": [
     ".*",
