--- a/package.json
+++ b/package.json
@@ -30,7 +30,5 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "dependencies": {
-    "grunt-contrib-copy": "^0.8.2"
-  }
+  "dependencies": {}
 }
