--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "Zinkerz"
   ],
   "dependencies": {
-    "angular": "1.4.x",
+    "angular": "1.4.8",
+    "angular-animate": "1.4.8",
     "Swiper": "swiper#~3.2.7",
     "firebase": "~2.3.2"
   },
