--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "infra",
-  "version": "v3.0.0",
+  "version": "v3.0.4",
   "authors": [
     "Zinkerz"
   ],
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "es5-shim": "~4.4.1",
-    "angular-mocks": "1.4.x",
+    "angular-mocks": "1.4.3",
     "mockfirebase": "~0.11.0",
     "jasmine-jquery": "^2.1.1"
   }
