--- a/.jshintrc
+++ b/.jshintrc
@@ -15,6 +15,7 @@
         "ionic": false,
         "Swiper": false,
         "Firebase": false,
-        "MockFirebase": false
+        "MockFirebase": false,
+        "content": false
     }
 }
