--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,29 @@
 {
-  "name": "infra",
-  "version": "v5.0.0",
-  "authors": [
-    "Zinkerz"
-  ],
-  "dependencies": {
-    "angular": "1.5.5",
-    "angular-animate": "1.5.5",
-    "Swiper": "swiper#~3.2.7",
-    "firebase": "^2.4.2"
-  },
-  "ignore": [
-    ".*",
-    "src",
-    "test",
-    "demo/"
-  ],
-  "main": [
-    "dist/znk.infra.js",
-    "dist/main.css"
-  ],
-  "devDependencies": {
-    "es5-shim": "~4.4.1",
-    "angular-mocks": "1.5.5",
-    "mockfirebase": "~0.11.0",
-    "jasmine-jquery": "^2.1.1"
-  }
+    "name": "infra",
+    "version": "v5.0.0",
+    "authors": [
+        "Zinkerz"
+    ],
+    "dependencies": {
+        "angular": "1.5.5",
+        "angular-animate": "1.5.5",
+        "Swiper": "swiper#~3.2.7",
+        "firebase": "^2.4.2"
+    },
+    "ignore": [
+        ".*",
+        "src",
+        "test",
+        "demo/"
+    ],
+    "main": [
+        "dist/main.js",
+        "dist/main.css"
+    ],
+    "devDependencies": {
+        "es5-shim": "~4.4.1",
+        "angular-mocks": "1.5.5",
+        "mockfirebase": "~0.11.0",
+        "jasmine-jquery": "^2.1.1"
+    }
 }
