--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
         "angular": "1.5.5",
         "angular-animate": "1.5.5",
         "Swiper": "swiper#~3.2.7",
-        "firebase": "^2.4.2"
+        "firebase": "^2.4.2",
+        "angular-translate": "^2.11.0",
+        "angular-translate-loader-partial": "^2.11.0"
     },
     "ignore": [
         ".*",
