--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,33 @@
 {
-    "name": "infra",
-    "version": "v4.0.6",
-    "authors": [
-        "Zinkerz"
-    ],
-    "dependencies": {
-        "angular": "1.5.5",
-        "angular-animate": "1.5.5",
-        "Swiper": "swiper#~3.2.7",
-        "firebase": "~2.4.2"
-    },
-    "ignore": [
-        ".*",
-        "src",
-        "test",
-        "demo"
-    ],
-    "main": [
-        "dist/znk.infra.js",
-        "dist/main.css"
-    ],
-    "resolutions": {
-        "angular": "1.5.4"
-    },
-    "devDependencies": {
-        "es5-shim": "~4.4.1",
-        "angular-mocks": "1.5.5",
-        "mockfirebase": "~0.11.0",
-        "jasmine-jquery": "^2.1.1"
-    }
+  "name": "infra",
+  "version": "v4.0.6",
+  "authors": [
+    "Zinkerz"
+  ],
+  "dependencies": {
+    "angular": "1.5.5",
+    "angular-animate": "1.5.5",
+    "Swiper": "swiper#~3.2.7",
+    "firebase": "~2.4.2",
+    "ng-idle": "^1.2.2"
+  },
+  "ignore": [
+    ".*",
+    "src",
+    "test",
+    "demo"
+  ],
+  "main": [
+    "dist/znk.infra.js",
+    "dist/main.css"
+  ],
+  "resolutions": {
+    "angular": "1.5.4"
+  },
+  "devDependencies": {
+    "es5-shim": "~4.4.1",
+    "angular-mocks": "1.5.5",
+    "mockfirebase": "~0.11.0",
+    "jasmine-jquery": "^2.1.1"
+  }
 }
