--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
         "angular-animate": "1.5.5",
         "Swiper": "swiper#~3.2.7",
         "firebase": "^2.4.2",
+        "angularfire": "1.1.3",
         "angular-translate": "^2.11.0",
         "angular-translate-loader-partial": "^2.11.0",
         "angular-svg-round-progressbar": "~0.2.7"
