--- a/.jshintrc
+++ b/.jshintrc
@@ -16,6 +16,9 @@
         "Swiper": false,
         "Firebase": false,
         "MockFirebase": false,
-        "content": false
+        "content": false,
+        "jasmine": false,
+        "it": false,
+        "expect": false
     }
 }
