--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
         "content": false,
         "jasmine": false,
         "it": false,
-        "expect": false
+        "expect": false,
+        "beforeEach": false
     }
 }
