--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angulartics": "1.0.3",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-svg-round-progressbar": "~0.2.7",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-material": "^1.0.9",
+    "angular-aria": "^1.5.8"
   },
   "ignore": [
     ".*",
