--- a/bower.json
+++ b/bower.json
@@ -34,5 +34,8 @@
     "angular-mocks": "1.5.5",
     "mockfirebase": "~0.11.0",
     "jasmine-jquery": "^2.1.1"
+  },
+  "resolutions": {
+    "angular": "1.5.5"
   }
 }
