--- a/bower.json
+++ b/bower.json
@@ -5,19 +5,19 @@
     "Zinkerz"
   ],
   "dependencies": {
-    "angular": "1.5.5",
-    "angular-animate": "1.5.5",
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
     "Swiper": "swiper#~3.2.7",
     "firebase": "^2.4.2",
     "ng-idle": "1.2.2",
-    "angular-translate": "^2.11.0",
     "angulartics": "1.0.3",
+    "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-svg-round-progressbar": "~0.2.7",
     "angular-ui-router": "^0.3.1",
     "plivo": "https://github.com/Knowledge-OTP/plivo.git",
-    "angular-material": "^1.0.9",
-    "angular-aria": "^1.5.8"
+    "angular-material": "1.1.0-rc.5"
   },
   "ignore": [
     ".*",
@@ -36,6 +36,6 @@
     "jasmine-jquery": "^2.1.1"
   },
   "resolutions": {
-    "angular": "1.5.5"
+    "angular": "^1.5.8"
   }
 }
