--- a/bower.json
+++ b/bower.json
@@ -1,42 +1,42 @@
 {
-    "name": "infra",
-    "version": "v5.0.20",
-    "authors": [
-        "Zinkerz"
-    ],
-    "dependencies": {
-        "angular": "^1.5.8",
-        "angular-animate": "^1.5.8",
-        "angular-aria": "^1.5.8",
-        "angular-sanitize": "^1.5.8",
-        "Swiper": "swiper#~3.2.7",
-        "firebase": "^2.4.2",
-        "ng-idle": "1.2.2",
-        "angulartics": "1.0.3",
-        "angular-translate": "^2.11.0",
-        "angular-translate-loader-partial": "^2.11.0",
-        "angular-svg-round-progressbar": "~0.2.7",
-        "plivo": "https://github.com/Knowledge-OTP/plivo.git",
-        "angular-material": "1.1.0-rc.5",
-        "angular-ui-router": "^0.3.1"
-    },
-    "ignore": [
-        ".*",
-        "src",
-        "test",
-        "demo/"
-    ],
-    "main": [
-        "dist/main.js",
-        "dist/main.css"
-    ],
-    "devDependencies": {
-        "es5-shim": "~4.4.1",
-        "angular-mocks": "1.5.5",
-        "mockfirebase": "~0.11.0",
-        "jasmine-jquery": "^2.1.1"
-    },
-    "resolutions": {
-        "angular": "^1.5.8"
-    }
+  "name": "infra",
+  "version": "v5.0.20",
+  "authors": [
+    "Zinkerz"
+  ],
+  "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "Swiper": "swiper#~3.2.7",
+    "firebase": "^2.4.2",
+    "ng-idle": "1.2.2",
+    "angulartics": "1.0.3",
+    "angular-translate": "^2.11.0",
+    "angular-translate-loader-partial": "^2.11.0",
+    "angular-svg-round-progressbar": "~0.2.7",
+    "plivo": "https://github.com/Knowledge-OTP/plivo.git",
+    "angular-material": "^1.1.0",
+    "angular-ui-router": "^0.3.1"
+  },
+  "ignore": [
+    ".*",
+    "src",
+    "test",
+    "demo/"
+  ],
+  "main": [
+    "dist/main.js",
+    "dist/main.css"
+  ],
+  "devDependencies": {
+    "es5-shim": "~4.4.1",
+    "angular-mocks": "1.5.5",
+    "mockfirebase": "~0.11.0",
+    "jasmine-jquery": "^2.1.1"
+  },
+  "resolutions": {
+    "angular": "^1.5.8"
+  }
 }
