--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,10 @@
     "angulartics": "1.0.3",
     "angular-translate": "^2.12.0",
     "angular-translate-loader-partial": "^2.11.0",
-    "angular-svg-round-progressbar": "~0.2.7",
     "plivo": "https://github.com/Knowledge-OTP/plivo.git",
     "angular-material": "^1.1.0",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-svg-round-progressbar": "^0.4.8"
   },
   "ignore": [
     ".*",
@@ -37,6 +37,7 @@
     "jasmine-jquery": "^2.1.1"
   },
   "resolutions": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-svg-round-progressbar": "^0.4.8"
   }
 }
