--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   ],
   "dependencies": {
     "angular": "1.5.8",
+    "all-envs-config": "https://github.com/Knowledge-OTP/all-envs-config.git#zinkerz/dev",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
     "angular-sanitize": "1.5.8",
@@ -15,6 +16,7 @@
     "angulartics": "1.0.3",
     "angular-translate": "2.12.0",
     "angular-translate-loader-static-files": "2.12.1",
+    "angular-translate-loader-partial": "2.12.1",
     "plivo": "https://github.com/Knowledge-OTP/plivo.git",
     "angular-material": "1.1.0",
     "angular-ui-router": "0.3.1",
@@ -35,9 +37,5 @@
     "angular-mocks": "1.5.5",
     "mockfirebase": "~0.11.0",
     "jasmine-jquery": "^2.1.1"
-  },
-  "resolutions": {
-    "angular": "1.5.8",
-    "angular-translate": "2.12.1"
   }
 }
