--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "es5-shim": "~4.4.1",
     "angular-mocks": "1.5.5",
     "mockfirebase": "~0.11.0",
-    "jasmine-jquery": "^2.1.1"
+    "jasmine-jquery": "^2.1.1",
+    "grunt": "^1.0.1"
   }
 }
