--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "znkinfra",
   "private": true,
   "devDependencies": {
+    "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-concat-json": "0.0.10",
     "grunt-contrib-clean": "0.6.0",
