--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,9 @@
     "firebase": "2.4.2",
     "ng-idle": "1.2.2",
     "angulartics": "1.0.3",
-    "angular-translate": "2.12.0",
-    "angular-translate-loader-static-files": "2.12.1",
-    "angular-translate-loader-partial": "2.12.1",
+    "angular-translate": "2.13.1",
+    "angular-translate-loader-static-files": "2.13.1",
+    "angular-translate-loader-partial": "2.13.1",
     "plivo": "https://github.com/Knowledge-OTP/plivo.git",
     "angular-material": "1.1.0",
     "angular-ui-router": "0.3.1",
@@ -34,8 +34,14 @@
   ],
   "devDependencies": {
     "es5-shim": "~4.4.1",
-    "angular-mocks": "1.5.5",
+    "angular-mocks": "1.5.8",
     "mockfirebase": "~0.11.0",
-    "jasmine-jquery": "^2.1.1"
+    "jasmine-jquery": "^2.1.1",
+    "angular-translate": "^2.13.1",
+    "angular-translate-loader-static-files": "^2.13.1"
+  },
+  "resolutions": {
+    "angular": "1.5.8",
+    "angular-messages": "1.5.8"
   }
 }
