--- a/bower.json
+++ b/bower.json
@@ -37,8 +37,8 @@
     "angular-mocks": "1.5.8",
     "mockfirebase": "~0.11.0",
     "jasmine-jquery": "^2.1.1",
-    "angular-translate": "^2.13.1",
-    "angular-translate-loader-static-files": "^2.13.1"
+    "angular-translate": "2.13.1",
+    "angular-translate-loader-static-files": "2.13.1"
   },
   "resolutions": {
     "angular": "1.5.8",
