--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "firebase": "2.4.2",
     "ng-idle": "1.2.2",
     "angulartics": "1.0.3",
+     "angular-messages": "1.5.8",
     "angular-translate": "2.13.1",
     "angular-translate-loader-static-files": "2.13.1",
     "angular-translate-loader-partial": "2.13.1",
