--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   ],
   "dependencies": {
     "angular": "1.5.8",
-    "all-envs-config": "https://82cd3b9d4db08ebe3ef1ec76233d2e7facf17fb5:x-oauth-basic@github.com/Knowledge-OTP/all-envs-config.git#~v0.0.41",
+    "all-envs-config": "https://82cd3b9d4db08ebe3ef1ec76233d2e7facf17fb5:x-oauth-basic@github.com/Knowledge-OTP/all-envs-config.git#1ca551208f31a9cf56f52546fe1fd5a237c468be",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
     "angular-sanitize": "1.5.8",
